--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a> (link broken, don't do it.</p>
+  <p class="rss-subscribe">S'inscrire au <a href="{{ "/feed.xml" | prepend: site.baseurl }}">flux RSS</a></p>
 
 </div>
